--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
+  },
+  "dependencies": {
+    "luxon": "^3.0.1"
   }
 }
